# hrmsBuildV1

./: README.md
hrms_app_dev/backend/: admin.py  config.py  pyproject.toml
hrms_app_dev/backend/app/: config.py  logger.py  main.py
hrms_app_dev/backend/app/api/: addresses.py  admin.py  attendance.py  auth.py  offices.py
hrms_app_dev/backend/app/core/: auth.py  geofence.py  ldap.py  scheduler.py
hrms_app_dev/backend/app/db/: base.py
hrms_app_dev/backend/app/models/: models.py
hrms_app_dev/backend/app/schemas/: schemas.py
hrms_app_dev/frontend/: admin.html  index.html  web.config
hrms_app_dev/frontend/css/: admin.css  styles.css
hrms_app_dev/frontend/js/: app.js  attendance.js  auth.js  config.js  location.js
hrms_app_dev/frontend/js/admin/: admin-activity.js  admin-auth.js  admin-dashboard.js  admin-homeaddresses.js  admin-offices.js  admin-users.js  admin.js
